[tool.poetry]
name = "theseus_growth"
version = "0.2.0"
description = "Theseus is an analytical tool suite for growth marketers"
authors = ["Eric Seufert <eric@mobiledevmemo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ESeufert/theseus_growth"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1"
numpy = "^1.18"
pandas = "^0.25.3"
scipy = "^1.4"
openpyxl = "^3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
