[tool.poetry]
name = "theseus_growth"
version = "0.2.2"
description = "Theseus is a library of tools to use in marketing analysis"
authors = ["Eric Benjamin Seufert <eric@mobiledevmemo.com>"]
license = "MIT"
readme = "README.md"
keywords = [ "cohort analysis", "analysis", "marketing", "media mix model" ]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.1.2"
pandas = "^0.25.3"
openpyxl = "^3.0.3"
scipy = "^1.4.1"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]

